# budok-ai

./: .env.example  .gitignore  AGENTS.md  LICENSE  README.md  match.conf  match.conf.example
code-review/: claude-review.md  codex-review.md
daemon/: pyproject.toml
daemon/config/: default_config.json  llm_first_test.json  llm_v_llm.json  tournament_bracket.json
daemon/src/yomi_daemon/: __init__.py  character_selection.py  cli.py  config.py  fallback.py  ids.py  manifest.py  match.py  orchestrator.py  prompt.py  protocol.py  redact.py  replay_capture.py  response_parser.py  server.py  tooling.py  tui.py  validation.py
daemon/src/yomi_daemon/adapters/: __init__.py  anthropic.py  base.py  baseline.py  google.py  local.py  ollama.py  openai.py  openrouter.py
daemon/src/yomi_daemon/analysis/: __init__.py  bracket.py  cli.py  game.py  outputs.py  pricing.py  report.py  summary.py  tournament.py
daemon/src/yomi_daemon/logging/: __init__.py  schemas.py
daemon/src/yomi_daemon/storage/: __init__.py  replay_index.py  writer.py
daemon/src/yomi_daemon/tournament/: __init__.py  bracket.py  cli.py  ratings.py  reporter.py  runner.py  scheduler.py
docs/: architecture.md  data_flow.md  experiments.md  game_internals.md  macos.md  operations.md  prompt_engineering.md  protocol.md  setup.md
mod/: BridgeActionApplySmoke.gd  BridgeHandshakeSmoke.gd  BridgeLiveMatchSmoke.gd  project.godot
plans/: debug_llm_battles.md  v0.md  v1.md
prompts/: character_select_v1.md  few_shot_v1.md  minimal_v1.md  move_catalog.json  reasoning_v1.md  strategic_v1.md
schemas/: action-decision.v1.json  action-decision.v2.json  config.v1.json  (+14 more)
(+97 files in other folders)
