[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "yomi-daemon"
version = "0.0.1"
description = "Daemon and local tooling for the YOMI Hustle LLM Arena project."
readme = "../README.md"
requires-python = ">=3.12"
dependencies = [
  "anthropic>=0.84.0",
  "jsonschema>=4.23.0",
  "openai>=2.26.0",
  "websockets>=15.0.1",
]

[project.scripts]
yomi-daemon = "yomi_daemon.cli:main"
yomi-daemon-check-uv = "yomi_daemon.tooling:main"

[dependency-groups]
dev = [
  "pytest>=8.3.0",
  "ruff>=0.8.0",
  "ty>=0.0.1a16"
]

[tool.hatch.build.targets.wheel]
packages = ["src/yomi_daemon"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
addopts = "-ra"
markers = [
  "integration: tests that spin up a real WebSocket server (deselect with -m 'not integration')",
]
